--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,33 @@
 @import "tailwindcss";
+@layer theme, base, components, utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --color-primary: #fdc700;
+  --color-secondary: #f6339a;
+  --color-tertiary: #2b7fff;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-primary: var(--color-primary);
+  --color-secondary: var(--color-secondary);
+  --color-tertiary: var(--color-tertiary);
+}
+
+
+@layer utilities {
+  .font-geist-mono {
+    font-family: var(--font-geist-mono);
+  }
+  .font-geologica {
+    font-family: var(--font-geologica);
+  }
+  .flex-center {
+    @apply flex items-center justify-center;
+  }
+  .gradient-text {
+    @apply bg-clip-text bg-linear-to-r from-primary via-secondary to-tertiary text-transparent;
+  }
+  .gradient-background {
+    @apply bg-linear-to-r from-primary via-secondary to-tertiary;
+  }
 }
