--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,6 @@
   --color-tertiary: var(--color-tertiary);
 }
 
-
 @layer utilities {
   .font-geist-mono {
     font-family: var(--font-geist-mono);
@@ -30,4 +29,28 @@
   .gradient-background {
     @apply bg-linear-to-r from-primary via-secondary to-tertiary;
   }
+}
+
+::selection {
+  background-color: #ff00ff;
+  color: white;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  padding: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: black !important;
+  opacity: 0.3;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  opacity: 0.9;
 }
