Refactor layout and page components for improved structure; add Texts component to Page and update styles for consistency; modify package dependencies

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,7 +42,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgb(106, 65, 112) !important;
+  background-color: #ff71f6 !important;
   opacity: 0.3;
   border-radius: 4px;
 }
